css/main.css
/* ... */
input.bpm {
  width: 2.2em;
  padding-left: 0;
  padding-right: .4em;
  text-align: right;
}
input.invalid {
  border-color: #f00;
}
input.centered {
  text-align: center;
}

button,
input.button {
  margin: .5em 0;
  font-size: 75%;
  padding: .8em 1.2em;
  background-color: #09814A;
  border-color: #09814A;
  color: #FFF;
  font-weight: bold;
  letter-spacing: .1em;
  text-transform: uppercase;
  border-style: solid;
  border-width: .2em;
  border-radius: .8em;
  transition: background-color .2s, border-color .2s;
}
button:hover,
input.button:hover,
button.lowlight:hover,
button.cancel:hover {
  background-color: #0CA761;
  border-color: #0CA761;
  color: #fff;
  cursor: pointer;
}
button:disabled,
button.lowlight:disabled {
  background-color: #8f8f8f;
  border-color: #8f8f8f;
  color: #fff;
  cursor: not-allowed !important;
}
button.small {
  padding: .1em .4em;
  border-radius: .2em;
}

label.checkbox {
  position: relative;
  padding-left: 1.7em;
}
label.checkbox input {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
}
label.checkbox .checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 1em;
  width: 1em;
  background-color: #fff;
  border: 1px solid #09814A;
  transition: background-color .2s;
}
label.checkbox:hover input ~ .checkmark {
  background-color: #ccc;
}
label.checkbox input:checked ~ .checkmark {
  background-color: #09814A;
}
label.checkbox:hover input:checked ~ .checkmark {
  background-color: #0CA761;
}
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}
label.checkbox input:checked ~ .checkmark:after {
  display: block;
}
label.checkbox .checkmark:after {
  left: .3em;
  top: .1em;
  width: .25em;
  height: .5em;
  border: solid white;
  border-width: 0 .2em .2em 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.logo .lang {
  position: absolute;
  right: .5em;
}
.logo .lang a {
  font-size: 70%;
  color: #FFF;
  margin-right: .1em;
}
.logo .lang a:hover {
  text-decoration: underline;
}

.instruction {
  margin-bottom: 1em;
  font-size: 125%;
  font-weight: bold;
}

.cookies {
  position: fixed;
  z-index: 1;
  width: 100%;
  bottom: 0;
  border-top: 1px solid #121619;
  background-color: #09814A;
  color: #FFF;
  padding: 0 10%;
}
.cookies table {
  margin: 0;
  padding: 0;
  margin-bottom: 1em;
}
.cookies table td {
  margin: 0;
  padding: 0;
}
.cookies button {
  float: right;
  margin-left: 1em;
  font-size: 80%;
  color: #09814A;
  background-color: #FFF;
}
.cookies button:hover {
  background-color: #A0F8D0;
  border-color: #A0F8D0;
}

.action-input-area {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1;
  display: none;
}
.action-input-area .background {
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: #121619;
  opacity: 30%;
}
.action-input-area .input {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #fff;
  border: 1px solid #000;
  padding: 2em;
}
.action-input-area .input .title {
  font-size: 125%;
  font-weight: bold;
  margin-bottom: 1em;
}
.action-input-area .input .buttons {
  margin-top: 1em;
}
.action-input-area .input .buttons button {
  float: right;
  margin-left: 2em;
}

.song_link_help {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  display: none;
}
.song_link_help .background {
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: #121619;
  opacity: 30%;
}
.song_link_help .info {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 1em;
  background-color: #121619;
}
.song_link_help .info h1,
.song_link_help .info p {
  color: #FFF;
}
.song_link_help .info img {
  margin-top: 1.25em;
}

button.lowlight,
button.cancel {
  background-color: #fff;
  color: #09814A;
}
button.loading {
  background-color: #8f8f8f !important;
  border-color: #8f8f8f !important;
  color: #fff !important;
}

.loading,
button.loading:hover {
  cursor: wait !important;
}
.bpm-range-area {
  margin: 1em 0;
}
.bpm-range-area .track {
  width: 4em;
  font-weight: bold;
}
.bpm-range-area .label {
  width: 10em;
}
.bpm-range-area .range-controller,
.bpm-range-area .distance-controller {
  width: 20em;
}
.bpm-range-area button {
  margin: 0 .5em;
  padding: 0;
  width: 1.8em;
  height: 1.6em;
  border-radius: .2em;
}
.bpm-range-area button:first-child {
  margin-left: 2em;
}

.ui-state-active,
.ui-widget-content .ui-state-active,
.ui-widget-header .ui-state-active,
a.ui-button:active,
.ui-button:active,
.ui-button.ui-state-active:hover {
	border: 1px solid #0CA761;
	background: #0CA761;
	font-weight: normal;
	color: #ffffff;
}
.ui-icon-background,
.ui-state-active .ui-icon-background {
	border: #0CA761;
}
.ui-widget-header {
  background: rgba(12, 167, 97, 0.3);
}
.warning {
  font-weight: bold;
}
.warning span {
  color: #E60000;
}

.bpm-info {
  font-size: 80%;
}

.donate img {
  margin: 0 1em;
  vertical-align: middle;
}

img.swish-qr {
  width: 50vw;
}

.swish-logo {
  height: auto;
  width: auto;
  max-height: 50px;
  max-width: 120px;
}

